CryptoConfigEntry should allow getting the default value of a config entry.
Description
Description
Revisions and Commits
Revisions and Commits
Status | Assigned | Task | ||
---|---|---|---|---|
Resolved | ikloecker | T5514 Kleopatra: Use default keyserver from gpg instead of hardcoded value | ||
Resolved | ikloecker | T5515 qgpgme: Allow retrieving the default value of a config entry |